# uniapi

./: .dockerignore  .editorconfig  .gitignore  .justfile  Cargo.toml  Dockerfile  Makefile  Net.Vatprc.Uniapi.sln  README.md  TEST.md  config.example.toml  go.mod  go.sum  main.go  settings.development.toml  tailwind.config.js
.config/: dotnet-tools.json
.github/workflows/: ci.yml  container-clean.yml  container.yml  dotnet.yml
Net.Vatprc.Uniapi/: .gitignore  ApiError.cs  AtcContext.cs  DiscordWorker.cs  Dockerfile  FlightWorker.cs  NavdataCommand.cs  Net.Vatprc.Uniapi.csproj  Program.cs  VATPRCContext.cs  appsettings.Development.toml  appsettings.toml  packages.lock.json  tailwind.config.js
Net.Vatprc.Uniapi.Test/: .gitignore  Net.Vatprc.Uniapi.Test.csproj  packages.lock.json
Net.Vatprc.Uniapi.UI.Event/: .env  .env.development  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.mts
Net.Vatprc.Uniapi.UI.Event/src/: api.d.ts  api.ts  client.ts  env.d.ts  main.tsx  routeTree.gen.ts  types-test.ts  utils.ts
Net.Vatprc.Uniapi.UI.Operation/: .env.development  index.html  package.json  pnpm-lock.yaml  vite.config.mts
Net.Vatprc.Uniapi.UI.Operation/src/: client.ts  env.d.ts  main.tsx  routeTree.gen.ts
Net.Vatprc.Uniapi/Adapters/: Arinc424NavdataAdapter.cs  DbNavdataAdapter.cs  DiscourseAdapter.cs  RudiMetarAdapter.cs  SmmsAdapter.cs  VatprcAtcAdapter.cs  VatsimAdapterModels.cs  VatsimAuthAdapter.Test.cs  VatsimAuthAdapter.cs
Net.Vatprc.Uniapi/Controllers/: AuthController.cs  CompatController.cs  EventAirspaceController.cs  EventController.cs  EventSlotBookingController.cs  EventSlotController.cs  FlightController.cs  InternalController.cs  NotamController.cs  SectorController.cs  SessionController.cs  StorageController.cs  UserController.cs  UtilController.cs
Net.Vatprc.Uniapi/Migrations/: 20240622161716_InitDatabase.Designer.cs  20240622161716_InitDatabase.cs  (+44 more)
controller/: auth.go  mod.go
docs/: navdata-csv-format.md
e2e/: package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts  vitest.global-setup.ts
e2e/lib/: backend.ts  (+2 more)
entity/: airspace.go  base.go  booking.go  event.go  event_airspace.go  slot.go  user.go
migrations/: 20260613000000_add_audit_log.sql  20260614000000_add_audit_log_child_entity.sql
rust/: .gitignore  Cargo.toml  settings.development.toml
rust/assets/config/: settings.default.toml
rust/migrations/: 20260425000000_initial_schema.sql
rust/src/: app.rs  auth.rs  error.rs  jwt.rs  main.rs  openapi.rs  services.rs  settings.rs
rust/src/adapter/: compat.rs  flight.rs  mod.rs  smms.rs  vatsim_auth.rs
rust/src/adapter/database/: atc_application.rs  auth.rs  compat.rs  event.rs  health.rs  mod.rs  navdata.rs  sheet.rs  training_application.rs  user.rs  user_atc_permission.rs
rust/src/flight_plan/: lexer.rs  mod.rs  parser.rs  validator.rs
rust/src/models/: user_controller_state.rs  user_role.rs
rust/src/repository/: airport.rs  airway.rs  atc.rs  device_authorization.rs  event_airspace.rs  event_atc_position.rs  event_slot.rs  mod.rs  preferred_route.rs  procedure.rs  session.rs  sheet_field.rs  sheet_filing.rs  training_application.rs  training_application_response.rs  user_atc_permission.rs  user_atc_status.rs  vhf_navaid.rs
rust/src/repository/atc/: atc_booking.rs  mod.rs
rust/src/repository/atc_training/: mod.rs  training.rs  training_application_response.rs  training_application_slot.rs
rust/src/repository/auth/: mod.rs  user.rs
rust/src/repository/event/: event_slot_booking.rs  mod.rs
rust/src/repository/navdata/: waypoint.rs
rust/src/routes/: atc.rs  atc_applications.rs  atc_bookings.rs  auth.rs  compat.rs  event_airspaces.rs  event_atc_positions.rs  event_slot_bookings.rs  event_slots.rs  events.rs  flights.rs  internal.rs  mod.rs  notams.rs  preferred_routes.rs  sectors.rs  session.rs  storage.rs  training_applications.rs  trainings.rs  user_atc_permissions.rs  users.rs
server/: drizzle.config.ts  package.json  pnpm-lock.yaml
src/: ApiError.cs  Application.cs  ApplicationsInterview.cs  ApplicationsMeta.cs  AtcContext.cs  Database.cs  DiscordWorker.cs  Event.cs  EventsPosition.cs  EventsPositionsBooking.cs  FailedJob.cs  FlightWorker.cs  ImportCommand.cs  Job.cs  Migration.cs  NavdataCommand.cs  Net.Vatprc.Uniapi.csproj  Permission.cs  Program.cs  Role.cs  RolesInheritance.cs  RolesPermission.cs  Schedule.cs  Train.cs  TrainComment.cs  TrainRequest.cs  TrainRequestsPeriod.cs  TrainsBooking.cs  User.cs  UsersRole.cs  UsersToken.cs  VATPRCContext.cs  app.rs  appsettings.toml  audit_log_service.rs  auth.rs  command.rs  discord.rs  dto.rs  error.rs  (+9 more)
test/: Net.Vatprc.Uniapi.Test.csproj  TestWithDatabase.cs  packages.lock.json
usecase/: airspace.go  auth.go  discourse.go
util/: config.go  util.go
(+632 files in other folders)
