[package]
name = "vatprc-uniapi"
version = "1.1.0"
edition = "2024"
default-run = "vatprc-uniapi"

[[bin]]
name = "vatprc-uniapi"
path = "src/main.rs"

[[bin]]
name = "openapi"
path = "src/bin/openapi.rs"

[dependencies]
axum = { version = "0.8.9", features = ["multipart"] }
base64 = "0.22.1"
chrono = { version = "0.4.44", features = ["clock", "serde"] }
config = "0.15.22"
futures = "0.3.32"
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
rand = "0.10.1"
regex = "1.12.3"
serenity = { version = "0.12.4", default-features = false, features = [
  "client",
  "gateway",
  "rustls_backend",
  "model",
] }
reqwest = { version = "0.13.3", features = ["json", "form", "multipart"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.11.0"
sqlx = { version = "0.8.6", features = [
  "runtime-tokio",
  "postgres",
  "sqlite",
  "uuid",
  "chrono",
  "migrate",
] }
tokio = { version = "1.52.1", features = [
  "macros",
  "rt-multi-thread",
  "net",
  "signal",
] }
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-opentelemetry = "0.33.0"
opentelemetry-appender-tracing = "0.32.0"
opentelemetry-otlp = "0.32.0"
opentelemetry_sdk = { version = "0.32.0", features = ["rt-tokio"] }
opentelemetry = "0.32.0"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
ulid = { version = "1.2.1", features = ["uuid"] }
utoipa = { version = "5.4.0", features = ["chrono", "uuid"] }
utoipa-axum = "0.2"
utoipa-scalar = { version = "0.3", features = ["axum"] }
url = "2.5.8"
uuid = { version = "1.23.1", features = ["serde"] }
tower-http = { version = "0.6.8", features = ["trace"] }
convert_case = "0.11.0"
arrayvec = { version = "0.7.6", features = ["serde"] }
zip = "8.6.0"
itertools = "0.14.0"
anyhow = "1.0.102"
ordered-float = "5.3.0"
serde_plain = "1.0.2"
csv = "1.4.0"
approx = "0.5.1"
mini-moka = { version = "0.10.3", features = ["sync"] }
