[package]
name = "vatprc-uniapi"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.9"
config = "0.15.22"
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.8.6", features = [
  "runtime-tokio",
  "postgres",
  "uuid",
  "chrono",
  "migrate",
] }
tokio = { version = "1.52.1", features = [
  "macros",
  "rt-multi-thread",
  "net",
  "signal",
] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
