[package]
name = "vatprc-uniapi"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.9", features = ["multipart"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
config = "0.15.22"
jsonwebtoken = "10"
rand = "0.9"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8.6", features = [
  "runtime-tokio",
  "postgres",
  "uuid",
  "chrono",
  "migrate",
] }
tokio = { version = "1.52.1", features = [
  "macros",
  "rt-multi-thread",
  "net",
  "signal",
] }
thiserror = "2"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
ulid = { version = "1", features = ["uuid"] }
uuid = { version = "1", features = ["serde"] }
